# YLab_University_python_intensive_project_tests

./: .gitignore  README.md  pyproject.toml
.github/workflows/: linter.yml  tests_and_linter.yml
tests/: __init__.py  conftest.py  dish_tests.py  file_parser.py  menu_dishes_and_submenus_count_tests.py  menu_tests.py  submenu_tests.py  tests.py
tests/fixtures/: dish_1_data_to_create.json  dish_1_data_to_update.json  dish_2_data_to_create.json  dish_2_data_to_update.json  menu_data_to_create.json  menu_data_to_update.json  submenu_data_to_create.json  submenu_data_to_update.json
